--- a/.abf.yml
+++ b/.abf.yml
@@ -2,7 +2,5 @@ sources:
   TORCS-1.3.0-src-robots-berniw.tar.bz2: 29d76d7d7bfc54d75aa41abccc8e3fb436c8f1a6
   TORCS-1.3.0-src-robots-bt.tar.bz2: 0ab78012f16dfd8f9c92bda6b87f35bb921f7734
   TORCS-1.3.0-src-robots-olethros.tar.bz2: baba622eef6adb724c61dd6a4568d7f65587763d
-  TORCS-1.3.3-src-robots-base.tar.bz2: a9ddf6967d18c14e2f1245b79c5569b685786f00
-  TORCS-1.3.3-src.tar.bz2: 9c5d721f2e5af5f4c5337f3a035a78844e8b33ed
-  TORCS-1.3.4-src-robots-base.tar.bz2: c4ef4eef1b597d896510700b647a14da05e56bf1
-  TORCS-1.3.4-src.tar.bz2: f477c00325ff5f4e976a57751029bf6af66b581e
+  TORCS-1.3.5-src-robots-base.tgz: 3ce2af2c982af7b01c44675d4240e5d03978270a
+  TORCS-1.3.5-src.tgz: 6cc5cf2afbb7f3e0295e39a000b157974dab6da0
