--- a/.abf.yml
+++ b/.abf.yml
@@ -2,5 +2,5 @@ sources:
   TORCS-1.3.0-src-robots-berniw.tar.bz2: 29d76d7d7bfc54d75aa41abccc8e3fb436c8f1a6
   TORCS-1.3.0-src-robots-bt.tar.bz2: 0ab78012f16dfd8f9c92bda6b87f35bb921f7734
   TORCS-1.3.0-src-robots-olethros.tar.bz2: baba622eef6adb724c61dd6a4568d7f65587763d
-  TORCS-1.3.5-src-robots-base.tgz: 3ce2af2c982af7b01c44675d4240e5d03978270a
-  TORCS-1.3.5-src.tgz: 6cc5cf2afbb7f3e0295e39a000b157974dab6da0
+  TORCS-1.3.6-src-robots-base.tar.xz: f9c6476f57f2f86d51a893296f52ac49b2febdd9
+  TORCS-1.3.6-src.tar.xz: e66fb591e153f6a280b522fc974063ab4a3e5f1e
